--- a/Spaceway/Base.lproj/Main.storyboard
+++ b/Spaceway/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="aRY-zQ-rCM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="aRY-zQ-rCM">
                                 <rect key="frame" x="37.5" y="50" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="GbD-iT-TF4"/>
@@ -193,10 +193,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="1080" height="1080"/>
         <image name="Marte" width="78" height="76"/>
         <image name="Saturno" width="174" height="174"/>
         <image name="Space5" width="2800" height="2800"/>
+        <image name="logo" width="1080" height="1080"/>
         <image name="rocket" width="512" height="512"/>
         <image name="waiter" width="512" height="512"/>
     </resources>
